CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
PROJECT(PoDoFoBrowser)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules")

SET(QT_USE_QT3SUPPORT TRUE)
FIND_PACKAGE(Qt4 REQUIRED)

# Set PoDoFo_DIR to ensure this gets found
FIND_PACKAGE(PoDoFo REQUIRED)

FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(LIBFREETYPE REQUIRED)
FIND_PACKAGE(LIBJPEG REQUIRED)

INCLUDE_DIRECTORIES(
	${LIBZ_H}
	${LIBFREETYPE_FT2BUILD_H}
	${LIBFREETYPE_FREETYPE_H}
	${LIBFONTCONFIG_H}
	)

MESSAGE("ZLIB headers: ${LIBZ_H} (found: ${ZLIB_FOUND})")
MESSAGE("LIBFREETYPE headers: ${LIBFREETYPE_FT2BUILD_H} ${LIBFREETYPE_FREETYPE_H} (found: ${LIBFREETYPE_FOUND})")
MESSAGE("LIBJPEG headers: ${LIBJPEG_H} (found: ${LIBJPEG_FOUND})")
MESSAGE("LIBFONTCONFIG headers: ${LIBFONTCONFIG_H} (found: ${LIBFONTCONFIG_FOUND})")

FIND_PACKAGE(LIBFONTCONFIG)
IF(LIBFONTCONFIG_FOUND)
	INCLUDE_DIRECTORIES(${LIBFONTCONFIG_H})
ENDIF(LIBFONTCONFIG_FOUND)

ADD_SUBDIRECTORY(src)
