CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
PROJECT(PoDoFoBrowser)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules")

MESSAGE("Remember to set QTDIR in your environment if qmake is not found")
SET(QT_USE_QT3SUPPORT TRUE)
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

# You should set PoDoFo_DIR to ensure this gets found
FIND_PACKAGE(PoDoFo REQUIRED)
FIND_LIBRARY(PoDoFo_LIB NAMES libpodofo podofo PATHS ${PoDoFo_DIR} ${PoDoFo_DIR}/src) 

FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(LIBFREETYPE REQUIRED)
FIND_PACKAGE(LIBJPEG REQUIRED)

INCLUDE_DIRECTORIES(
	${LIBZ_H}
	${LIBFREETYPE_FT2BUILD_H}
	${LIBFREETYPE_FREETYPE_H}
	${LIBFONTCONFIG_H}
	)

MESSAGE("ZLIB headers: ${LIBZ_H}")
MESSAGE("LIBFREETYPE headers: ${LIBFREETYPE_FT2BUILD_H} ${LIBFREETYPE_FREETYPE_H}")
MESSAGE("LIBJPEG headers: ${LIBJPEG_H}")

IF(NOT WIN32)
	FIND_PACKAGE(LIBFONTCONFIG)
	IF(LIBFONTCONFIG_FOUND)
		INCLUDE_DIRECTORIES(${LIBFONTCONFIG_H})
	ENDIF(LIBFONTCONFIG_FOUND)

	MESSAGE("LIBFONTCONFIG headers: ${LIBFONTCONFIG_H} (found: ${LIBFONTCONFIG_FOUND})")
ENDIF(NOT WIN32)

ADD_SUBDIRECTORY(src)
